force-app/main/default/objects/CEMS_Interview_Panel__c/CEMS_Interview_Panel__c.object-meta.xml
<CustomObject>
    <label>Interview Panel</label>
    <nameField>
        <label>Interview Panel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Panel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>