force-app/main/default/objects/CEMS_Interview_Panel__c/fields/CEMS_Interviewer_2__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Interviewer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CEMS_Personnel__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Interview Panel (Interviewer 2)</relationshipLabel>
    <relationshipName>Interview_Panel1</relationshipName>
    <type>Lookup</type>
</CustomField>