force-app/main/default/objects/CEMS_Interview_Panel__c/fields/CEMS_Personnel__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personnel</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Interview Panel (Personnel)</relationshipLabel>
    <relationshipName>Interview_Panel3</relationshipName>
    <type>Lookup</type>
</CustomField>