force-app/main/default/objects/CEMS_Interview_Panel__c/fields/CEMS_Position_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Position_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position Name</label>
    <referenceTo>CEMS_Job_Opening__c</referenceTo>
    <relationshipLabel>Interview Panel</relationshipLabel>
    <relationshipName>Position_Name</relationshipName>
    <type>Lookup</type>
</CustomField>