force-app/main/default/objects/CEMS_Interview_Panel__c/validationRules/FillAtleatOneInterviewer.validationRule-meta.xml
<ValidationRule>
    <fullName>FillAtleatOneInterviewer</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(CEMS_Interviewer_1__c) &amp;&amp; ISBLANK(CEMS_Interviewer_2__c) &amp;&amp; ISBLANK(CEMS_Interviewer_3__c)</errorConditionFormula>
    <errorMessage>Please ensure that at least one interviewer is assigned to this panel.</errorMessage>
</ValidationRule>